# Windows-Service-Process-Monitoring-Agent

./: .gitignore  README.md  TECHNICAL_DOCUMENTATION.md  pyproject.toml  whitelist.txt
deliverables/: Process-Monitoring-Agent-Summary.pptx  report-20260409-180127.json
reports/: report-20260407-142354.json  report-20260407-142354.txt  report-20260407-142423.json  report-20260407-142423.txt  report-20260407-142820.json  report-20260407-142820.txt  report-20260407-142928.json  report-20260407-142928.txt  report-20260407-142950.json  report-20260407-142950.txt  report-20260407-143012.json  report-20260407-143012.txt  report-20260407-143033.json  report-20260407-143033.txt  report-20260407-143054.json  report-20260407-143054.txt  report-20260407-143115.json  report-20260407-143115.txt  report-20260407-143136.json  report-20260407-143136.txt  report-20260407-143157.json  report-20260407-143157.txt  report-20260407-143218.json  report-20260407-143218.txt  report-20260407-143246.json  report-20260407-143246.txt  report-20260407-143308.json  report-20260407-143308.txt  report-20260407-143331.json  report-20260407-143331.txt  report-20260407-143354.json  report-20260407-143354.txt  report-20260407-143415.json  report-20260407-143415.txt  report-20260407-143436.json  report-20260407-143436.txt  report-20260407-143457.json  report-20260407-143457.txt  report-20260407-143518.json  report-20260407-143518.txt  (+79 more)
src/: config.py  monitor.py  reporting.py
state/: service_baseline.json
windows_service_process_monitoring_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
